examples/deployments/GKE/sglang/gaie/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sglang-dsv31-agg-route
  namespace: dynamo-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
    namespace: dynamo-system
  rules:
  - matches:
    - headers:
      - name: x-pool
        value: agg
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: sglang-dsv31-aggregated-gaie-pool
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: sglang-dsv31-aggregated-gaie-pool
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sglang-dsv31-disagg-route
  namespace: dynamo-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: inference-gateway
    namespace: dynamo-system
  rules:
  - matches:
    - headers:
      - name: x-pool
        value: disagg
    backendRefs:
    - group: inference.networking.k8s.io
      kind: InferencePool
      name: sglang-dsv31-disagg-gaie-pool
